# jira-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  PROJECT.md  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
docs/: USAGE.docx
docs/api/: TOOLS.md
docs/architecture/: ARCHITECTURE.md
docs/design/: DESIGN.md
docs/runbooks/: setup-jira-credentials.md
docs/use-cases/: USE_CASES.md
examples/: claude_desktop_config.json  cursor_mcp.json
scripts/: build_usage_docx.py  capture_screenshots.py  init_db.py  oauth_login.py  quality.sh  smoke_jira.py
src/jira_mcp/: __init__.py  __main__.py
src/jira_mcp/auth/: api_token.py  oauth.py  provider.py
src/jira_mcp/clients/: issues.py  jira.py  projects.py  sprints.py  users.py
src/jira_mcp/config/: settings.py
src/jira_mcp/db/: connection.py  init.py
src/jira_mcp/db/repositories/: audit.py  cache.py  oauth_tokens.py
src/jira_mcp/models/: __init__.py  jira_entities.py  tool_io.py
src/jira_mcp/prompts/: __init__.py  backlog_grooming.py  sprint_review.py  standup_summary.py  triage_bugs.py
src/jira_mcp/resources/: __init__.py  jira_resources.py
src/jira_mcp/server/: __init__.py  app.py  lifespan.py  transport.py
src/jira_mcp/tools/: __init__.py  analytics.py  issues.py  projects.py  sprints.py  users.py
src/jira_mcp/utils/: correlation.py  errors.py  jql.py  logging.py  retry.py
tests/: conftest.py
tests/fixtures/jira/: boards_list.json  error_401.json  error_429.json  issue_PROJ-123.json  issue_search_response.json  project_PROJ.json  projects_list.json  sprint_42.json  sprints_list.json  transitions.json  users_search.json
tests/unit/: test_audit_repository.py  test_cache_repository.py  test_issue_client.py  test_issue_tools.py  test_jira_client.py  test_jql_helpers.py  test_oauth_helpers.py  test_oauth_provider.py  test_project_client.py  test_project_tools.py  test_prompts.py  test_resources.py  test_settings.py  test_smoke.py  test_sprint_client.py  test_sprint_tools.py  test_token_repository.py  test_transport.py  test_user_client.py  test_user_tools.py
web/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/analytics/: analytics-client.tsx  page.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/mcp/[tool]/: route.ts
web/src/app/api/mcp/tools/: route.ts
web/src/app/chat/: chat-client.tsx  page.tsx
web/src/app/issues/: issues-search-client.tsx  page.tsx
web/src/app/issues/[key]/: issue-detail-tabs.tsx  page.tsx
web/src/app/issues/new/: new-issue-form.tsx  page.tsx
web/src/app/projects/: page.tsx
web/src/app/projects/[key]/: page.tsx
web/src/app/settings/: page.tsx  settings-client.tsx
web/src/app/sprints/: page.tsx  sprints-client.tsx
web/src/components/: app-sidebar.tsx  mcp-tool-form.tsx  providers.tsx  theme-toggle.tsx
web/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  select.tsx  sheet.tsx  skeleton.tsx  sonner.tsx  tabs.tsx  textarea.tsx
web/src/hooks/: use-jira.ts
web/src/lib/: env.ts  jira.ts  mcp-client.ts  types.ts  utils.ts
