[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-mcp-server"
version = "0.1.0"
description = "Production-grade Model Context Protocol server for Atlassian Jira Cloud."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Roni Das", email = "49780975+ronidas39@users.noreply.github.com" }]
keywords = ["mcp", "model-context-protocol", "jira", "atlassian", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "motor>=3.4.0",
  "pymongo>=4.7.0",
  "structlog>=24.1.0",
  "tenacity>=8.2.0",
  "python-dotenv>=1.0.0",
  "anyio>=4.3.0",
  "aiofiles>=23.2.0",
  "certifi>=2024.2.2",
  "starlette>=0.37.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "respx>=0.21.0",          # httpx mocking
  "mongomock-motor>=0.0.30",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-aiofiles",
]

[project.scripts]
jira-mcp = "jira_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_mcp"]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle / pyflakes
  "I",                # isort
  "B",                # bugbear
  "UP",               # pyupgrade
  "ASYNC",            # async lints
  "S",                # bandit security
  "C4",               # comprehensions
  "RET",              # return checks
  "SIM",              # simplifications
  "PL",               # pylint subset
  "RUF",              # ruff-native
]
ignore = [
  "S101",             # asserts in tests are fine
  "PLR0913",          # tool functions naturally have many params
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]

# -----------------------------------------------------------------------------
# mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_decorators = false  # MCP SDK decorators
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["motor.*", "respx.*", "mongomock_motor.*", "aiofiles", "aiofiles.*"]
ignore_missing_imports = true

# The mcp SDK exposes server-registration as untyped decorators
# (`@server.list_tools()`, `@server.call_tool()`, and the resource and
# prompt equivalents). They cannot be sensibly typed at the call site, so
# disable the related strict checks for the modules that use them.
[[tool.mypy.overrides]]
module = [
  "jira_mcp.tools",
  "jira_mcp.tools.*",
  "jira_mcp.resources.*",
  "jira_mcp.prompts.*",
]
disallow_untyped_calls = false
disallow_untyped_decorators = false

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=jira_mcp",
  "--cov-report=term-missing",
]
markers = [
  "integration: requires real Jira instance and MongoDB",
  "slow: tests that take more than 1 second",
]

[tool.coverage.run]
branch = true
source = ["src/jira_mcp"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
